Kubernetes/Storage/Longhorn/yamls/ig-longhorn.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: longhorn-dashboard-https-redirect
  namespace: longhorn-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: longhorn-dashboard-security
  namespace: longhorn-system
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard-websecure
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.urbaman.it`)
      services:
      - name: longhorn-frontend
        port: 80
        serversTransport: longhorn-dashboard-transport
      middlewares:
        - name: longhorn-dashboard-security
  tls:
    secretName: longhorn-urbaman
    options:
      name: longhorn-dashboard-tlsoptions
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard-web
  namespace: longhorn-system
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`longhorn.urbaman.it`)
      services:
      - name: longhorn-frontend
        port: 80
      middlewares:
        - name: longhorn-dashboard-https-redirect
